kubernetes/vue-flask-mongo-kubernetes/kubernetes/flask-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    name: flask-api
  name: flask-api
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 1
  selector:
    matchLabels:
      app: flask-api
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: flask-api
    spec:
      containers:
      - env:
        - name: FLASK_ENV
          value: development
        - name: MONGO_HOST
          value: mongodb
        - name: MONGO_PORT
          value: "27017"
        - name: MONGO_DB
          value: flask_api
        image: flask-api:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 5000
        name: flask-api
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
