kubernetes/vue-flask-mongo-kubernetes/kubernetes/mongodb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    name: database
  name: mongodb
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 1
  selector:
    matchLabels:
      service: mongodb
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:4.2.5
        volumeMounts:
        - mountPath: /data/db
          name: mongodb-volume-mount
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: mongodb-volume-mount
        persistentVolumeClaim:
          claimName: mongodb-pvc
