kubernetes/vue-flask-mongo-kubernetes/kubernetes/vue-frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vue-frontend
  labels:
    name: vue-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vue-frontend
  template:
    metadata:
      labels:
        app: vue-frontend
    spec:
      containers:
      - name: vue-frontend
        image: vue-frontend:latest
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
