kubernetes/vue-flask-mongo-kubernetes/kubernetes/flask-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-api
  labels:
    service: flask-api
spec:
  selector:
    app: flask-api
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
