kubernetes/vue-flask-mongo-kubernetes/kubernetes/flask-api.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-api
  labels:
    service: flask-api
spec:
  selector:
    app: flask-api
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    name: flask-api
  name: flask-api
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 1
  selector:
    matchLabels:
      app: flask-api
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: flask-api
    spec:
      containers:
      - env: # Changed to statefulset
        - name: FLASK_ENV
          value: development
        - name: MONGO_HOST
          value: mongo
        - name: MONGO_PORT
          value: "27017"
        - name: MONGO_DB
          value: mongo
        image: sondreweb/flask-backend:test.v1
        imagePullPolicy: Always
        ports:
          - containerPort: 5000
        name: flask-api
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
