kubernetes/vue-flask-mongo-kubernetes/kubernetes/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    service: mongodb
spec:
  selector:
    service: mongodb
  type: ClusterIP
  ports:
  - port: 27017
