kubernetes/vue-flask-mongo-kubernetes/kubernetes/vue-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vue-frontend
  labels:
    service: vue-frontend
  name: vue-frontend
spec:
  selector:
    app: vue-frontend
  ports:
  - port: 8080
    targetPort: 8080
