kubernetes/vue-flask-mongo-kubernetes/kubernetes/app-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-boilerplate-ingress
  labels:
    name: app-ingress
spec:
  rules:
  - host: app-boilerplate
    http:
      paths:
      - path: /
        backend:
          serviceName: vue-frontend
          servicePort: 8080
      - path: /api
        backend:
          serviceName: flask-api
          servicePort: 5000
